# my-gtk-bar

./: Cargo.toml
src/: main.rs  style.css
