[package]
name = "statusbar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
dbus = "0.9.7"
gtk = "0.18.1"
gtk-layer-shell = "0.8.0"
hyprland = { version="0.3.13", features=["silent"] }
regex = "1.10.4"
sysinfo = "0.30.11"
